# nrp-core-msgs

nrp_ros_msgs/: CMakeLists.txt  package.xml
nrp_ros_msgs/msg/: Test.msg
protobuf/engine_proto_defs/: dump_msgs.proto  edlut_msgs.proto  gazebo_msgs.proto  nrp_generic.proto  test_msgs.proto  wrappers.proto
protobuf/nrp_proto_defs/: engine_grpc.proto  nrp_server.proto
